--- a/Standard Controls/Standard Controls.vbproj
+++ b/Standard Controls/Standard Controls.vbproj
@@ -95,11 +95,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="LabelControl1.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="LabelControl1.aspx.designer.vb">
+      <DependentUpon>LabelControl1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LabelControl1.aspx.vb">
+      <DependentUpon>LabelControl1.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
